--- a/client/src/components/Cards/Card.css
+++ b/client/src/components/Cards/Card.css
@@ -1,3 +1,18 @@
+:root {
+  --modal-radius: 12px;
+  --black: #0f0f0f;
+  --dark-grey: #222;
+  --error: #a9323a;
+  --eggplant: #1F1028;
+  --dumpster: #314443;
+  --light-green: #52C47A;
+  --tan: #EDE1D8;
+  --light-grey: #f0f0f0;
+  --white: #fefefe;
+  --shadow: rgb(124, 124, 124);
+  --fadeOut: opacity ease-out 300ms;
+}
+
 .cards-flex {
   display: flex;
   justify-content: center;
@@ -6,9 +21,17 @@
   padding: 1rem 3rem;
 }
 
+.card-title {
+  color: var(--light-green);
+  width: 260px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 .card-box {
   margin: 1rem;
   margin-bottom: 2rem;
+  box-shadow: var(--shadow);
 }
 
 .swiper-container {
