--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
 
 body {
   margin: 0;
-  font-family: "Nunito Sans", sans-serif;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
