--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -39,7 +39,7 @@
 .search-bar:hover {
   box-shadow: 0 1px 2px rgb(0 0 0 / 15%), 0 4px 12px rgb(0 0 0 / 10%);
   transition: all 0.2s;
-  cursor: pointer;
+  cursor: text;
 }
 
 .search-bar-text {
@@ -56,14 +56,32 @@
   padding-right: 0.5rem;
 }
 
+.search-field {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
+  font-size: 14px;
+  line-height: 1.3;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  padding-left: 5px;
+  border: none;
+}
+
+.search-field:focus {
+  outline: none;
+}
+
 .search-icon-div {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: red;
+  background-color: var(--light-green);
   padding: 0.25rem;
   border-radius: 50%;
   color: white;
+}
+
+.search-icon-div:hover {
+  cursor: pointer;
 }
 
 .profile-container {
