--- a/client/src/components/Cards/Card.css
+++ b/client/src/components/Cards/Card.css
@@ -1,19 +1,3 @@
-:root {
-  --modal-radius: 12px;
-  --black: #0f0f0f;
-  --dark-grey: #222;
-  --error: #a9323a;
-  --eggplant: #1F1028;
-  --dumpster: #314443;
-  --light-green: #52C47A;
-  --tan: #EDE1D8;
-  --light-grey: #f0f0f0;
-  --white: #fefefe;
-  --shadow: rgb(124, 124, 124);
-  --shadow2: rgb(124, 124, 124, 0.5);
-  --fadeOut: opacity ease-out 300ms;
-}
-
 .cards-flex {
   display: flex;
   justify-content: space-between;
@@ -23,7 +7,7 @@
   padding: 40px;
   row-gap: 40px;
   overflow: hidden;
-  margin-bottom: 54px;
+  margin-bottom: var(--clearFooter)
 }
 
 .card-title {
