--- a/client/src/components/Filter/Filter.css
+++ b/client/src/components/Filter/Filter.css
@@ -8,6 +8,16 @@
   padding-top: 36px;
   padding-left: 40px;
   padding-right: 40px;
+  padding-bottom: 18px;
+  position: sticky;
+  top: 60px;
+  background: #fff;
+}
+
+.is-stuck {
+  /* position: fixed;
+  top: 60px; */
+  background: green;
 }
 
 .filter-div::-webkit-scrollbar {
