--- a/client/src/components/Cards/ShowpageCard.css
+++ b/client/src/components/Cards/ShowpageCard.css
@@ -2,18 +2,29 @@
   padding: 0px 40px;
   display: grid;
   grid-template-columns: 3fr 2fr;
-  margin-bottom: var(--clearFooter);
+  margin-bottom: 72px;
 }
 
 .item-info {
-  background: green;
+  /* background: green; */
   padding-right: 9px;
 }
 
 .item-info img {
   width: 100%;
+  height: 100%;
+  border-radius: 6px;
 }
 
 .item-location-map {
-  background: blue;
+  /* background: blue; */
+  padding-top: 19px;
+  z-index: -1;
+  border-radius: 6px;
+  padding-left: 9px;
+}
+
+.item-location-map img {
+  width: 100%;
+  border-radius: 6px;
 }
