--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -38,6 +38,7 @@
   border: 1px solid var(--grey);
   border-radius: 2rem;
   box-shadow: 0 1px 2px rgb(0 0 0 / 8%), 0 4px 12px rgb(0 0 0 / 5%);
+  margin-left: 40px;
 }
 
 .search-bar:hover {
